src/objects/Competitive_Product_Comp_Set__c.object
<CustomObject>
    <fields>
        <fullName>Competitor_Products__c</fullName>
        <description>Competitor products (comma separated)</description>
        <label>Competitor Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedOn__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>CreatedOn</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Motorola_Product__c</fullName>
        <label>Motorola Product</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Side_by_Side_Link__c</fullName>
        <formula>&apos;https://mobility--c.na2.visual.force.com/apex/CIReport?CompSetId=&apos; &amp; Id</formula>
        <label>Side by Side Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Competitive_Product_Comp_Set</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Competitive Product Comp Set</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Motorola_Product__c</columns>
        <columns>Competitor_Products__c</columns>
        <columns>User__c</columns>
        <columns>CreatedOn__c</columns>
        <columns>Side_by_Side_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>contains</operation>
            <value>Pawan</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>contains</operation>
            <value>Bhawana</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Competitive Side by Side</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitive Product Comp Set</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>